arrow-order-react/src/App.scss
a, a:focus{
    text-decoration: none;
    color: black;
    outline: none;
}

p{
    font-size: 16px;
}

* {
    outline: none;
    cursor: default;
}

.App{
    font-family: Comfortaa;
    outline: none;
    width: 100%;
    display: flex;
    justify-content: center;

    & > *:not([class = 'popWrapper']){
        width: 100%;
        max-width: 400px;
    }
}

// @media screen and (max-width: 500px) {
//     .App * {
//         font-size: 12px;
//     }
// }

